--- a/Automation/pom.xml
+++ b/Automation/pom.xml
@@ -25,7 +25,7 @@
 				<configuration>
 					<forkCount>1</forkCount>
 					<suiteXmlFiles>
-						<suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
+						<suiteXmlFile>src/resources/testng.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
