--- a/Automation/pom.xml
+++ b/Automation/pom.xml
@@ -70,8 +70,11 @@
 			<artifactId>selenium-api</artifactId>
 			<version>3.2.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.25</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
-
-
 </project>
