--- a/Automation/pom.xml
+++ b/Automation/pom.xml
@@ -21,13 +21,13 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19.1</version>
+				<version>2.20</version>
 				<configuration>
 					<forkCount>1</forkCount>
 					<suiteXmlFiles>
-						<suiteXmlFile>${mySuiteXML}</suiteXmlFile>
+						<!--<suiteXmlFile>${mySuiteXML}</suiteXmlFile>-->
+						<suiteXmlFile>src/test/java/TestNG.xml</suiteXmlFile>
 					</suiteXmlFiles>
-					<workingDirectory>target/</workingDirectory>
 				</configuration>
 			</plugin>
 		</plugins>
