--- a/Automation/pom.xml
+++ b/Automation/pom.xml
@@ -25,8 +25,8 @@
 				<configuration>
 					<forkCount>1</forkCount>
 					<suiteXmlFiles>
-						<!--<suiteXmlFile>${mySuiteXML}</suiteXmlFile>-->
-						<suiteXmlFile>src/test/java/TestNG.xml</suiteXmlFile>
+						<suiteXmlFile>${mySuiteXML}</suiteXmlFile>
+						<!--<suiteXmlFile>src/test/java/TestNG.xml</suiteXmlFile>-->
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
