--- a/Automation/pom.xml
+++ b/Automation/pom.xml
@@ -25,7 +25,7 @@
 				<configuration>
 					<forkCount>1</forkCount>
 					<suiteXmlFiles>
-						<suiteXmlFile>${mySuiteXML}</suiteXmlFile>
+						<suiteXmlFile>${suiteXML}</suiteXmlFile>
 						<!--<suiteXmlFile>src/test/java/TestNG.xml</suiteXmlFile>-->
 					</suiteXmlFiles>
 				</configuration>
