--- a/Automation/pom.xml
+++ b/Automation/pom.xml
@@ -7,7 +7,18 @@
 	<groupId>Automation</groupId>
 	<artifactId>Automation</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+	<repositories>
+		<repository>
+			<id>mvnrepository</id>
+			<url>http://central.maven.org/maven2/</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+		</repository>
+	</repositories>
     <build>
         <plugins>
 			<plugin>
@@ -25,7 +36,7 @@
 				<configuration>
 					<forkCount>1</forkCount>
 					<suiteXmlFiles>
-						<suiteXmlFile>${suiteXML}</suiteXmlFile>
+						<!--<suiteXmlFile>${suiteXML}</suiteXmlFile>-->
 						<!--<suiteXmlFile>src/test/java/TestNG.xml</suiteXmlFile>-->
 					</suiteXmlFiles>
 				</configuration>
@@ -65,16 +76,24 @@
             <artifactId>selenium-api</artifactId>
             <version>3.2.0</version>
         </dependency>
-		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-api</artifactId>
-			<version>3.2.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.25</version>
+        <dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.17-beta1</version>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+			<version>4.1</version>
+			<scope>test</scope>
+		</dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+
+
+    </dependencies>
 </project>
