--- a/Automation/.gitignore
+++ b/Automation/.gitignore
@@ -2,6 +2,9 @@
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
+target/
+test-output/
+
 
 # Sensitive or high-churn files:
 .idea/**/dataSources/
