--- a/Automation/pom.xml
+++ b/Automation/pom.xml
@@ -86,5 +86,10 @@
 			<artifactId>commons-collections4</artifactId>
 			<version>4.1</version>
 		</dependency>
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>RELEASE</version>
+		</dependency>
       </dependencies>
 </project>
