added patient API methods and JSON parser

--- a/Automation/pom.xml
+++ b/Automation/pom.xml
@@ -91,5 +91,10 @@
 			<artifactId>rest-assured</artifactId>
 			<version>RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20170516</version>
+		</dependency>
       </dependencies>
 </project>
