--- a/Automation/pom.xml
+++ b/Automation/pom.xml
@@ -96,5 +96,10 @@
 			<artifactId>json</artifactId>
 			<version>20170516</version>
 		</dependency>
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>5.4.0</version>
+		</dependency>
       </dependencies>
 </project>
