--- a/Automation/pom.xml
+++ b/Automation/pom.xml
@@ -125,5 +125,10 @@
 			<artifactId>guice</artifactId>
 			<version>3.0</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-api</artifactId>
+            <version>3.4.0</version>
+        </dependency>
+    </dependencies>
 </project>
