--- a/Automation/pom.xml
+++ b/Automation/pom.xml
@@ -144,5 +144,11 @@
 			<version>1.7.25</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.relevantcodes</groupId>
+			<artifactId>extentreports</artifactId>
+			<version>2.40.2</version>
+		</dependency>
+
 	</dependencies>
 </project>
