--- a/Automation/pom.xml
+++ b/Automation/pom.xml
@@ -144,11 +144,20 @@
 			<version>1.7.25</version>
 		</dependency>
 
+
+		<!--<dependency>-->
+			<!--<groupId>com.aventstack</groupId>-->
+			<!--<artifactId>extentreports</artifactId>-->
+			<!--<version>3.0.6</version>-->
+		<!--</dependency>-->
+
+
 		<dependency>
 			<groupId>com.relevantcodes</groupId>
 			<artifactId>extentreports</artifactId>
-			<version>2.40.2</version>
+			<version>2.41.2</version>
 		</dependency>
+
 
 	</dependencies>
 </project>
