--- a/Automation/pom.xml
+++ b/Automation/pom.xml
@@ -157,6 +157,11 @@
 			<artifactId>extentreports</artifactId>
 			<version>2.41.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-api</artifactId>
+			<version>3.4.0</version>
+		</dependency>
 
 
 	</dependencies>
