--- a/Automation/pom.xml
+++ b/Automation/pom.xml
@@ -144,14 +144,6 @@
 			<version>1.7.25</version>
 		</dependency>
 
-
-		<!--<dependency>-->
-			<!--<groupId>com.aventstack</groupId>-->
-			<!--<artifactId>extentreports</artifactId>-->
-			<!--<version>3.0.6</version>-->
-		<!--</dependency>-->
-
-
 		<dependency>
 			<groupId>com.relevantcodes</groupId>
 			<artifactId>extentreports</artifactId>
@@ -163,6 +155,11 @@
 			<version>3.4.0</version>
 		</dependency>
 
-
+		<!-- https://mvnrepository.com/artifact/io.appium/java-client -->
+		<dependency>
+			<groupId>io.appium</groupId>
+			<artifactId>java-client</artifactId>
+			<version>4.1.2</version>
+		</dependency>
 	</dependencies>
 </project>
