--- a/Automation/pom.xml
+++ b/Automation/pom.xml
@@ -29,6 +29,13 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <!--<configuration>-->
+                    <!--<mainClass>com.heal.framework.test.RunTestSuite</mainClass>-->
+                <!--</configuration>-->
+            </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
