update pom, remove duplicated dependency

--- a/Automation/pom.xml
+++ b/Automation/pom.xml
@@ -32,10 +32,11 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
+				<version>1.6.0</version>
                 <configuration>
                     <mainClass>com.heal.framework.test.RunTestSuite</mainClass>
 					<arguments>
-						<argument>${run_file}</argument>
+						<argument>-classpath</argument>
 					</arguments>
                 </configuration>
             </plugin>
