--- a/Automation/pom.xml
+++ b/Automation/pom.xml
@@ -26,6 +26,7 @@
 				<version>3.3</version>
 				<configuration>
 					<source>1.8</source>
+					<encoding>UTF-8</encoding>
 					<target>1.8</target>
 				</configuration>
 			</plugin>
