--- a/Automation/pom.xml
+++ b/Automation/pom.xml
@@ -126,7 +126,12 @@
 			<artifactId>velocity</artifactId>
 			<version>1.7</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.1</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.google.inject/guice -->
         <dependency>
 			<groupId>com.google.inject</groupId>
